--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    hello world
+    <h1>Hello World, we are software developers!</h1>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
