--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -12,41 +12,43 @@
     <h1 id="title">Microverse software developers Survey Form</h1>
     <p id="description">Thank you for taking time to take part in this survey</p>
     <form action="" id="survey-form">
-      <label for="" id="name-label">Name</label>
-      <input type="text" id="name" placeholder="Enter your name">
-      <label for="" id="email-label">Email</label>
-      <input type="email" id="email" placeholder="Enter your email">
-      <label for="" id="age-number">Age</label>
-      <input type="number" id="age" maxlength="20" minlength="5" placeholder="Enter your age">
-      <label for="" id="dropdown-lable">Which option best describes your current role?</label>
-      <select name="" id="dropdown" aria-placeholder="select your current role">
-        <option value="Student" ></option>
-        <option value="Full-Time Job"></option>
-        <option value="Full Time Learner"></option>
-        <option value="Prefer not to say"></option>
-        <option value="other"></option>
-      </select>
-      <label for="" id="radio-label">Would you recommend Microverse to your friend?</label>
-      <input type="radio" name="radio-button">Definitely
-      <input type="radio" name="radio-button">Maybe
-      <input type="radio" name="radio-button">Not Sure
-      <label for=""></label>
-      <label for="" id="dropdown-lable">What is your favorite feature of Microverse?</label>
-      <select name="" id="dropdown" placeholder="select your current role">
-        <option value="Challenges" ></option>
-        <option value="Community"></option>
-        <option value="Project"></option>
-        <option value="Open Source"></option>
-      </select>
-      <label for="">What would you like to see improved? (Check all that apply)</label>
-      <input type="checkbox"> Front-end Project
-      <input type="checkbox"> Back-end Project
-      <input type="checkbox"> Data Visualisation
-      <input type="checkbox"> Challenges
-      <input type="checkbox"> Videos
-      <label for="">Any comments or suggestions?</label>
-      <textarea name="" id="textArea" cols="30" rows="10" placeholder="Enter your comment here"></textarea>
-      <button id="submit">Submit</button>
+      <div class="form-container">
+        <label for="" id="name-label">Name</label>
+        <input type="text" id="name" placeholder="Enter your name">
+        <label for="" id="email-label">Email</label>
+        <input type="email" id="email" placeholder="Enter your email">
+        <label for="" id="age-number">Age</label>
+        <input type="number" id="age" maxlength="20" minlength="5" placeholder="Enter your age">
+        <label for="" id="dropdown-lable">Which option best describes your current role?</label>
+        <select name="" id="dropdown">
+          <option value="Student"></option>
+          <option value="Full-Time Job"></option>
+          <option value="Full Time Learner"></option>
+          <option value="Prefer not to say"></option>
+          <option value="other"></option>
+        </select>
+        <label for="" id="radio-label">Would you recommend Microverse to your friend?</label>
+        <input type="radio" name="radio-button">Definitely
+        <input type="radio" name="radio-button">Maybe
+        <input type="radio" name="radio-button">Not Sure
+        <label for=""></label>
+        <label for="" id="dropdown-lable">What is your favorite feature of Microverse?</label>
+        <select name="" id="dropdown" placeholder="select your current role">
+          <option value="Challenges"></option>
+          <option value="Community"></option>
+          <option value="Project"></option>
+          <option value="Open Source"></option>
+        </select>
+        <label for="">What would you like to see improved? (Check all that apply)</label>
+        <input type="checkbox"> Front-end Project
+        <input type="checkbox"> Back-end Project
+        <input type="checkbox"> Data Visualisation
+        <input type="checkbox"> Challenges
+        <input type="checkbox"> Videos
+        <label for="">Any comments or suggestions?</label>
+        <textarea name="" id="textArea" cols="30" rows="10" placeholder="Enter your comment here"></textarea>
+        <button id="submit">Submit</button>
+      </div>
     </form>
   </div>
 
