--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Fork Me! FCC: Test Suite Template</title>
-  <link rel="stylesheet" href="fcc-test-suite-template-master/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
  
 <body>
@@ -63,7 +63,7 @@
     - The freeCodeCamp Team
 
     -->
-  <script src="fcc-test-suite-template-master/js/index.js"></script>
+  <script src="js/index.js"></script>
 </body>
 
 </html>
