--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <p id="description">Thank you for taking time to take part in this survey</p>
     <form action="" id="survey-form">
       <label for="" id="name-label">Name</label>
-      <input type="text" id="name" placeholder="Enter your name">
+      <input type="text" id="name" required placeholder="Enter your name">
       <label for="" id="email-label">Email</label>
-      <input type="email" id="email" placeholder="Enter your email">
-      <label for="" id="age-number">Age</label>
-      <input type="number" id="age" maxlength="20" minlength="5" placeholder="Enter your age">
+      <input type="email" id="email" required placeholder="Enter your email">
+      <label for="" id="number-label">Age</label>
+      <input type="number" id="number" max="20" min="5" placeholder="Enter your age">
       <label for="" id="dropdown-lable">Which option best describes your current role?</label>
       <select name="" id="dropdown">
 	<option disabled selected value>Select current role</option>
@@ -27,9 +27,9 @@
         <option value="other">other</option>
       </select>
       <label for="" id="radio-label">Would you recommend Microverse to your friend?</label>
-     <div><input type="radio" name="radio-button">Definitely</div>
-     <div><input type="radio" name="radio-button">Maybe</div>
-     <div><input type="radio" name="radio-button">Not Sure</div>
+     <div><input type="radio" name="radio-button" value="definitely">Definitely</div>
+     <div><input type="radio" name="radio-button" value="maybe">Maybe</div>
+     <div><input type="radio" name="radio-button" value="notSure">Not Sure</div>
       <label for=""></label>
       <label for="" id="dropdown-lable">What is your favorite feature of Microverse?</label>
       <select name="" id="dropdown">
@@ -40,11 +40,11 @@
         <option value="Open Source">Open Source</option>
       </select>
       <label for="" id="improve-label">What would you like to see improved? (Check all that apply)</label>
-     <div><input type="checkbox" id="box"> Front-end Project</div>
-     <div><input type="checkbox" id="box"> Back-end Project</div>
-      <div><input type="checkbox" id="box"> Data Visualisation</div>
-      <div><input type="checkbox" id="box"> Challenges</div>
-      <div><input type="checkbox" id="box"> Videos</div>
+     <div><input type="checkbox" id="box" value="frontEndProject"> Front-end Project</div>
+     <div><input type="checkbox" id="box" value="backEndProject"> Back-end Project</div>
+      <div><input type="checkbox" id="box" value="dataVisualisation"> Data Visualisation</div>
+      <div><input type="checkbox" id="box" value="challenges"> Challenges</div>
+      <div><input type="checkbox" id="box" value="videos"> Videos</div>
       <label for="" id="comment-label">Any comments or suggestions?</label>
       <textarea name="" id="textArea" cols="30" rows="10" placeholder="Enter your comment here"></textarea>
       <button id="submit">Submit</button>
